Removed hidden from class to ensure visibility of following buttons Register, Sign In, Sign Out

--- a/static/index.html
+++ b/static/index.html
@@ -396,13 +396,13 @@
         <ul class="column-container">
             <li>
                 <ul class="row-container-left">
-                    <li id="register" class="item text-trail-space hidden">
+                    <li id="register" class="item text-trail-space">
                         <a class="menu-text" href="#">Register</a>
                     </li>
-                    <li id="sign-in" class="item menu-text text-trail-space hidden">
+                    <li id="sign-in" class="item menu-text text-trail-space">
                         <a class="menu-text" href="#">Sign in</a>
                     </li>
-                    <li id="sign-out" class="item menu-text text-trail-space hidden">
+                    <li id="sign-out" class="item menu-text text-trail-space">
                         <a class="menu-text" href="#">Sign out</a>
                     </li>
                 </ul>
